# playerctl-nowplaying-pygui

./: add-hypr-workspace-rule.sh  main.py  main.py.b  main.py.dynamicbg  main.py.howilikeit  pyproject.toml  style.css  transparent_test.py
